[gd_scene load_steps=3 format=3 uid="uid://3wsah0c6phc7"]

[ext_resource type="Theme" uid="uid://bakwovji80vev" path="res://Assets/Themes/default_theme.tres" id="1_ejhlw"]
[ext_resource type="Script" uid="uid://xffntq81kbai" path="res://UI/actions.gd" id="1_lq8xp"]

[node name="Actions" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_lq8xp")

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(180, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.0
offset_top = -56.5
offset_right = 90.0
offset_bottom = 56.5
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Attack_Btn" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_ejhlw")
text = "ATACAR"

[node name="Defense_Btn" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "DEFENDER"

[node name="End_Turn_Btn" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "ENCERRAR"

[connection signal="button_down" from="PanelContainer/MarginContainer/VBoxContainer/Attack_Btn" to="." method="_on_attack_btn_button_down"]
[connection signal="button_down" from="PanelContainer/MarginContainer/VBoxContainer/Defense_Btn" to="." method="_on_defense_btn_button_down"]
[connection signal="button_down" from="PanelContainer/MarginContainer/VBoxContainer/End_Turn_Btn" to="." method="_on_end_turn_btn_button_down"]
